At 768px width the horizontal scroll bar is no longer visible.

--- a/demo/css/app-styles.css
+++ b/demo/css/app-styles.css
@@ -388,6 +388,7 @@ ul.pagination li.current a {
 .row {
   /*width: 1260px;*/
   width: 100%;
+  min-width: 300px;
 }
 
 .row .row {
